# openlibrary

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  OpenLibrary.cmake  README  README.md  _travis.yml  annotated.html  appveyor.bat  appveyor.yml  base_8hpp_source.html  class_debug-members.html  class_debug.html  class_html_parser-members.html  class_html_parser.html  class_html_tag-members.html  class_html_tag.html  class_html_tag_list-members.html  class_html_tag_list.html  class_optional-members.html  class_optional.html  class_q_ex_progress_bar_model-members.html  class_q_ex_progress_bar_model.html  class_q_ex_progress_bar_view-members.html  class_q_ex_progress_bar_view.html  class_qt_ext_choose_file-members.html  class_qt_ext_choose_file.html  class_qt_ext_choose_file_dialog-members.html  class_qt_ext_choose_file_dialog.html  class_search_list-members.html  class_search_list.html  classdata__ptr-members.html  classdata__ptr.html  classes.html  classol_1_1_router_1_1_a_star-members.html  classol_1_1_router_1_1_a_star.html  classol_1_1_router_1_1_closed_set-members.html  classol_1_1_router_1_1_closed_set.html  (+73 more)
QtExt/: CMakeLists.txt  qtext_choosefile.cpp  qtext_choosefile.hpp  qtext_progressbar.cpp
autogenerated/: FindOpenLibrary.cmake  README  libraries.cmake
cmake/: FindCppUTest.cmake  FindGMock.cmake  FindGTest.cmake  FindOpenLibrary.cmake  ForceAddFlags.cmake  OpenLibrary.cmake.in  OpenLibraryConfig.cmake.in  OpenLibraryConfigVersion.cmake.in  OpenLibraryUse.cmake  OpenLibrary_HeadersLibConfig.cmake.in  cmake_tests.cmake  doTests.sh  functions.cmake  generate_cmake_rule.sh  private_functions.cmake  publicFunctions.cmake
deprecated/math/: CMakeLists.txt  crc32.hpp  math.cpp
deprecated/math/tests/: RunAllTests.cpp  math_tests.cpp
deprecated/palgorithm/: CMakeLists.txt  comparisons  opt_test.cpp
deprecated/palgorithm/bose-nelson/: CMakeLists.txt  bose-nelson.hpp  output_generator.hpp
deprecated/palgorithm/private/: psort_private.hpp
deprecated/palgorithm/tests/: RunAllTests.cpp
doc/: CHANGELOG-1.1  CHANGELOG-2.0  NEWS  [CMake] How to make a ProjectConfig.cmake.htm  en-C++11.htm  linki  pl-C++11.htm  pomysły  todo.txt
htmlParser/: CMakeLists.txt  css.l  css.y  html.l  html.y  htmlparser.cpp  htmlparser.hpp  htmltag.cpp  htmltag.hpp  htmltaglist.cpp  searchlist.cpp
math/: CMakeLists.txt  crc32.cpp  crc32.hpp  math.cpp  math.hpp
math/tests/: math_tests.cpp  types_test.cpp
qextserialport/: CMakeLists.txt
qextserialport/examples/event/: CMakeLists.txt
router/: CMakeLists.txt  main.cpp  router.cpp  router.hpp  routerdemo.cpp  routerdemo.hpp
router/A_star/: base.hpp  router.hpp  std_alg.hpp  std_types.hpp  traits.hpp
router/doc/Jump Point Search - Shortest Path_pliki/: ads
router/doc/astar_pliki/: 1.css
router/doc/en-wiki-A_pliki/: load_005.php  load_007.php  load_009.php
router/doc/pl-wiki-A_pliki/: load_003.php  load_004.php
scripts/: CMakeLists.txt  cmake_tests.cmake  doTests.sh
scripts/tmp/: math  utils
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  (+28 more)
src/QtExt/: CMakeLists.txt  qtext_choosefile.cpp  qtext_choosefile.hpp  qtext_progressbar.hpp
src/common/: CMakeLists.txt  debug.hpp  open_library_settings.hpp  std_macros.hpp
src/htmlParser/: CMakeLists.txt  css.l  css.y  html.l  html.y  htmlparser.cpp  htmlparser.hpp  htmltag.cpp  htmltag.hpp  htmltaglist.cpp  htmltaglist.hpp  searchlist.cpp  searchlist.hpp
src/htmlParser/private/: css.l  css.y  cssspdata.hpp  html.l  html.y  htmlparser.cpp  htmltag.cpp  htmltaglist.cpp  htmltaglist.hpp  searchlist.cpp  searchlist.hpp
src/htmlParser/private/tests/: RunAllTests.cpp  htmlTagList_tests.cpp  htmlTag_tests.cpp
src/htmlParser/tests/: RunAllTests.cpp  htmlParser_tests.cpp  htmlTagList_tests.cpp  htmlTag_tests.cpp
src/math/: CMakeLists.txt  crc32.cpp  crc32.hpp  math.hpp
src/palgorithm/: CMakeLists.txt  psort.cpp  psort.hpp  qsort.cpp  ts_queue.hpp  ts_resource.cpp  ts_resource.hpp
src/palgorithm/bose-nelson/: CMakeLists.txt  bose-nelson.cpp  bose-nelson.hpp  main.cpp  output_generator.cpp  output_generator.hpp
src/palgorithm/private/: psort_private.hpp  sorting_networks.hpp
src/palgorithm/tests/: RunAllTests.cpp  palgorithm.cpp
src/putils/: CMakeLists.txt  ts_queue.hpp  ts_resource.cpp  ts_resource.hpp
src/putils/tests/: CMakeLists.txt  ts_resource_tests.cpp
src/qextserialport/examples/enumerator/: CMakeLists.txt
src/qextserialport/src/: CMakeLists.txt  qextserialenumerator_win.cpp
src/router/: CMakeLists.txt  main.cpp
src/router/A_star/: base.hpp  std_alg.hpp  std_types.hpp  traits.hpp
src/router/doc/: Jump Point Search - Shortest Path.htm  aStarTutorial.htm  astar.html  en-wiki-A.htm  links.txt  pl-wiki-A.htm
src/router/doc/Jump Point Search - Shortest Path_pliki/: a.css  google_ads.js
src/router/doc/aStarTutorial_pliki/: cm.htm  cm_002.htm
src/router/doc/aStarTutorial_pliki/cm_data/: iu3.htm
src/router/doc/aStarTutorial_pliki/cm_data/iu3_data/: cs.htm
src/router/doc/aStarTutorial_pliki/cm_data_002/iu3_data/cs_data/: e-cs.htm
src/router/doc/astar_pliki/: plusone.js  tweet_button.htm
src/router/doc/astar_pliki/tweet_button_data/: count.json
src/router/doc/en-wiki-A_pliki/: index_003.php  load.css  load.php  load_002.php  load_008.php  load_010.php
src/router/doc/pl-wiki-A_pliki/: geoiplookup  load.css  load.php  load_002.css  load_002.php  load_006.php  load_007.php  load_008.php  load_009.php
src/tools/gtest_runner/: CMakeLists.txt  main.cpp  main_win.cpp  so_main.cpp
src/utils/: CMakeLists.txt  anonymous_ptr.hpp  copy_ptr.hpp  cpuinfo.cpp  cpuinfo.hpp  data_ptr.hpp  optional.hpp
src/utils/tests/: RunAllTests.cpp  utils_tests.cpp
src/utils_qt/: CMakeLists.txt  configuration.cpp  configuration_json_storage.cpp  configuration_p.hpp
tests/putils/: CMakeLists.txt  ts_resource_tests.cpp
tests/utils_qt/: CMakeLists.txt  configuration_tests.cpp  iconfiguration_storage_mock.hpp
utils/: CMakeLists.txt  copy_ptr.hpp  cpuinfo.cpp  cpuinfo.hpp
(+112 files in other folders)
